# movies-rag

./: .gitignore  .ruff.toml  README.md  data_load.py  docker-compose.yaml  pyproject.toml  requirements.txt  translate_and_enreach.py
app/: chroma.py  main.py  redis_cache.py  schema.py  schemas.py  settings.py  utils.py
chroma-db/: chroma.sqlite3
json-data/movies/1925/: the-wizard-of-oz.json
json-data/movies/1931/: frankenstein.json
json-data/movies/1933/: king-kong.json  the-invisible-man.json
json-data/movies/1938/: the-adventures-of-robin-hood.json
json-data/movies/1939/: the-wizard-of-oz.json
json-data/movies/1940/: the-great-dictator.json
json-data/movies/1942/: casablanca.json
json-data/movies/1952/: singin-in-the-rain.json
json-data/movies/1953/: roman-holiday.json
json-data/movies/1955/: rebel-without-a-cause.json
json-data/movies/1958/: vertigo.json
json-data/movies/1961/: breakfast-at-tiffanys.json
json-data/movies/1962/: dr-no.json  to-kill-a-mockingbird.json  whatever-happened-to-baby-jane.json
json-data/movies/1963/: from-russia-with-love.json
json-data/movies/1964/: goldfinger.json
json-data/movies/1965/: the-sound-of-music.json  thunderball.json
json-data/movies/1966/: the-good-the-bad-and-the-ugly.json
json-data/movies/1967/: you-only-live-twice.json
json-data/movies/1971/: diamonds-are-forever.json
json-data/movies/1972/: cabaret.json  deliverance.json  the-godfather.json  the-poseidon-adventure.json
json-data/movies/1974/: la-patagonia-rebelde.json  the-godfather-part-ii.json
json-data/movies/1982/: tron.json  (+1 more)
(+470 files in other folders)
