[project]
name = "movies-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "fastapi[standard]>=0.124.4",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.9",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
]
[tool.uvicorn]
reload = true
reload_exclude = [
  ".venv/*",
  "chroma-db/*",
  "__pycache__/*",
  "*.sqlite3"
]