[project]
name = "movies-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "ruff>=0.14.9",
    "sentence-transformers>=5.2.0",
]
[tool.uvicorn]
reload = true
reload_exclude = [
  ".venv/*",
  "chroma-db/*",
  "__pycache__/*",
  "*.sqlite3"
]
